--- a/index.html
+++ b/index.html
@@ -72,6 +72,79 @@
                 transform: rotate(360deg);
             }
         }
+
+        buttonHisto {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            padding: 10px 20px;
+            border-radius: 7px;
+            border: 1px solid rgb(61, 106, 255);
+            font-size: 14px;
+            font-weight: 600;
+            background: transparent;
+            color: #fff;
+            overflow: hidden;
+            box-shadow: 0 0 0 0 transparent;
+            -webkit-transition: all 0.2s ease-in;
+            -moz-transition: all 0.2s ease-in;
+            transition: all 0.2s ease-in;
+        }
+
+        buttonHisto:hover {
+            background: rgb(61, 106, 255);
+            box-shadow: 0 0 30px 5px rgba(0, 142, 236, 0.815);
+            -webkit-transition: all 0.2s ease-out;
+            -moz-transition: all 0.2s ease-out;
+            transition: all 0.2s ease-out;
+        }
+
+        buttonHisto:hover::before {
+            -webkit-animation: sh02 0.5s 0s linear;
+            -moz-animation: sh02 0.5s 0s linear;
+            animation: sh02 0.5s 0s linear;
+        }
+
+        buttonHisto::before {
+            content: '';
+            display: block;
+            width: 0px;
+            height: 86%;
+            position: absolute;
+            top: 7%;
+            left: 0%;
+            opacity: 0;
+            background: #fff;
+            box-shadow: 0 0 50px 30px #fff;
+            -webkit-transform: skewX(-20deg);
+            -moz-transform: skewX(-20deg);
+            -ms-transform: skewX(-20deg);
+            -o-transform: skewX(-20deg);
+            transform: skewX(-20deg);
+        }
+
+        @keyframes sh02 {
+            from {
+                opacity: 0;
+                left: 0%;
+            }
+
+            50% {
+                opacity: 1;
+            }
+
+            to {
+                opacity: 0;
+                left: 100%;
+            }
+        }
+
+        buttonHisto:active {
+            box-shadow: 0 0 0 0 transparent;
+            -webkit-transition: box-shadow 0.2s ease-in;
+            -moz-transition: box-shadow 0.2s ease-in;
+            transition: box-shadow 0.2s ease-in;
+        }
     </style>
 </head>
 
@@ -94,6 +167,8 @@
     <a href="javascript:undo()" style="color:red">Retour en arrière ↺</a>
 
     <div id="history"></div>
+
+    <buttonHisto onclick="copyPasteHisto()">↗</buttonHisto>
 
     <button onclick="clearHistory()">Réinitialiser</button>
 
@@ -270,19 +345,36 @@
 
         function undo() {
 
-        if (confirm("Supprimer la dernière entrée ?")) {
-            let obj = JSON.parse(localStorage.gameData);
-            obj.suggestedCombination = obj.history.at(-1).combination;
-            obj.history.pop();
-            history = obj.history;
-            document.getElementById('suggestion').textContent = obj.suggestedCombination;
-            document.getElementById('combination').value = obj.suggestedCombination;
-            localStorage.gameData = JSON.stringify(obj);
-            updateHistoryDisplay();
+            if (confirm("Supprimer la dernière entrée ?")) {
+                let obj = JSON.parse(localStorage.gameData);
+                obj.suggestedCombination = obj.history.at(-1).combination;
+                obj.history.pop();
+                history = obj.history;
+                document.getElementById('suggestion').textContent = obj.suggestedCombination;
+                document.getElementById('combination').value = obj.suggestedCombination;
+                localStorage.gameData = JSON.stringify(obj);
+                updateHistoryDisplay();
             }
 
         }
 
+        function copyPasteHisto() {
+
+            let texte = prompt("Copier/coller ici tout l'historique du digicode en vrac pour charger les données :");
+            texte = texte.match(/^(Tu as essayé la combinaison|\{).*/gm);
+            let obj = JSON.parse(localStorage.gameData);
+            obj.history = [];
+
+            for (i = 0; i < texte.length; i += 2) {
+                obj.history.push({ combination: texte[i].slice(-15).replaceAll("/", ""), exact: texte[i + 1].includes("Aucun") ? 0 : +texte[i + 1].match(/\d+/g) });
+            }
+
+            history = obj.history.reverse();
+            localStorage.gameData = JSON.stringify(obj);
+            suggestCombinationOptimized();
+            updateHistoryDisplay();
+
+        }
 
         window.onload = function () {
             if (savedData.history) {
