--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
             margin: 5px;
             padding: 10px;
             font-size: 16px;
-            width: 200px;
+            width: 160px;
+            text-align: center;
+            border-radius: 10px;
+        }
+
+        input::placeholder {
+            font-size: 80%;
+            line-height: normal;
+            color: #999;
         }
 
         button {
@@ -168,7 +176,7 @@
 
     <div id="history"></div>
 
-    <buttonHisto onclick="copyPasteHisto()">↗</buttonHisto>
+    <!-- <buttonHisto onclick="copyPasteHisto()">↗</buttonHisto> -->
 
     <button onclick="clearHistory()">Réinitialiser</button>
 
